--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -112,3 +112,6 @@ extensions:
 security:
   # Allow frame for embedding speaker notes in slides
   allow_frame: true
+
+# meta
+meta_image: content/authors/admin/avatar.png
