--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,16 +10,16 @@ main:
   - name: Publications
     url: "/publication"
     weight: 20
-
+  # - name: Blog Posts
+  #   url: "/post"
+  #   weight: 40
   # - name: Projects
   #   url: '#projects'
   #   weight: 30
   # - name: Talks
   #   url: '#talks'
   #   weight: 40
-  # - name: Blog Posts
-  #   url: "posts"
-  #   weight: 40
+
   # - name: Contact
   #   url: "#contact"
   #   weight: 60
